Fixed margin gap

--- a/src/static/Nav.css
+++ b/src/static/Nav.css
@@ -54,7 +54,7 @@
 }
 
 .content{
-    margin-top: 100px;
+    margin-top: 50px;
     margin-left: 10px;
     margin-right: 10px;
 }
